<resources>
    <string name="app_name">RetroShare</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">RetroShare</string>
    <string name="connect">connect</string>
    <string name="leave_lobby">leave lobby</string>
    <string name="send_chat">send chat</string>
    <string name="insert_message_here">insert message here</string>
    <string name="peers">peers</string>
    <string name="chat">chat</string>
    <string name="chat_lobbies">chat lobbies</string>
    <string name="add_friend">add friend</string>
    <string name="hostname">hostname</string>
    <string name="port">port</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="error">error</string>
    <string name="err_unknown_host">could not get ip for  this hostname</string>
    <string name="err_no_route_to_host">could not contact server. maybe you are not connected to a network.</string>
    <string name="err_connection_refused">host refused connection: ip or port wrong or server not running</string>
    <string name="err_bad_signature">the servers public is not the same as last time</string>
    <string name="err_auth_failed">ssh authentification failed: wrong  user or password</string>
    <string name="err_send">error while sending</string>
    <string name="err_receive">error while receiving</string>
    <string name="block_friend">(TODO) block friend</string>
    <string name="system_status">(TODO) system status</string>
    <string name="connection_error">connection error</string>
    <string name="connected">connected</string>
    <string name="not_connected">not connected</string>
    <string name="new_message">new message</string>
    <string name="new_private_chat_message">new private chat message</string>
    <string name="new_lobby_chat_message">new lobby chat message</string>
    <string name="topic">topic</string>
    <string name="bandwidth_up_down">bandwidth up/down</string>
    <string name="network_status">network status</string>
    <string name="files">files</string>
    <string-array name="file_actions">
        <item >continue</item>
        <item >wait</item>
        <item >pause</item>
        <item >restart</item>
        <item >check</item>
        <item >cancel</item>
        <item >show link as qrcode</item>
    </string-array>
    <string name="filename">filename:</string>
    <string name="size">size:</string>
    <string name="hash">hash:</string>
    <string name="download">download</string>
    <string name="rate">rate:</string>
    <string name="search">search</string>
    <string name="select_server">select server/account</string>
    <string name="show_password">" show password"</string>
    <string name="save_password">save password</string>
    <string name="new_server">new server..</string>
    <string name="add">add</string>
    <string name="enter_ssh_password">enter ssh password</string>
    <string name="arbitrary_name">arbitrary name</string>
    <string name="ssh_username">ssh username</string>
    <string name="ssh_port">ssh port</string>
    <string name="new_retroshare_nogui_server">new retroshare-nogui server</string>

    
    <!-- Authenticator BEGIN -->
    <string name="ACCOUNT_TYPE">org.retroshare.android</string>
	<string name="authenticator_label">RetroShare Account</string>
    <string name="authenticator_activity_localname_summary">Chose between available RetroShare account to enable sync</string>
    <string name="authenticator_activity_localname_label">Account Local Name</string>
    <string name="authenticator_activity_accounts_not_selected_title">No Account Selected</string>
    <string name="authenticator_activity_accounts_not_selected_message">You should select an account to register or create another RetroShare account if no one is available before adding it for sync</string>
    <string name="authenticator_preference_category_server">Server Settings</string>
    <!-- Authenticator END -->

	<!-- Contact Sync Provider BEGIN  -->
	<!-- Contact Sync Provider END  -->

	<!-- RetroShare Android Proxy BEGIN-->
	<!-- RetroShare Android Proxy END-->
    
</resources>